[tool.poetry]
name = "dots-game"
version = "0.1.0"
description = ""
authors = ["veledara <71222580+veledara@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dots_game"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
